--- a/server/src/public/index.html
+++ b/server/src/public/index.html
@@ -11,9 +11,12 @@
     <h2>
       Це серверна частина програми: "Автоматизована система обліку оцінки занять студентами".
     </h2>
-    <h2>
-      Посилання на програму: <a target="_blank" href="https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance">https://github.com/deniska-sosiska/Automated-system-for-recording-student-attendance</a>
-    </h2>
+    <h3>
+      Посилання на програму: <a target="_blank" href="http://localhost:9999">link</a>
+    </h3>
+    <h3>
+      Посилання на Репозиторій: <a target="_blank" href="https://github.com/deniska-sosiska/CollegeBook-MEVN-stack">link</a>
+    </h3>
   </div>
 </body>
 </html>
